# project-food-box

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
.config/: foodbox.nginx  gunicorn.py  ref.nginx  supervisord.conf
.static/css/: ingredients.css
app/: requirements.txt
app/config/: urls.py
app/config/settings/: __init__.py  base.py  dev.py  production.py
app/crawling/: crawling.html  crawling.py
app/crawling/recipe/: 0.html  1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  27.html  28.html  29.html  3.html  30.html  31.html  32.html  33.html  34.html  35.html  36.html  37.html  38.html  39.html  4.html  40.html  41.html  42.html  43.html  44.html  (+16 more)
app/main/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
app/main/migrations/: 0001_initial.py  0002_auto_20200517_1753.py  0002_auto_20200520_1918.py  0002_auto_20200530_2116.py  0002_foodcomment.py  0002_recommendedfood_detail.py  0003_auto_20200529_0216.py
app/main/urls/: views.py
app/members/: admin.py  apis.py  forms.py  models.py  serializers.py  urls.py  views.py
app/members/migrations/: 0001_initial.py  0002_auto_20200513_1727.py  0002_duration.py  0003_auto_20200628_1607.py  0004_auto_20200628_1640.py  0005_auto_20200628_1641.py  0006_auto_20200628_1642.py  0007_auto_20200628_1643.py  0008_auto_20200628_1649.py  0009_auto_20200628_1650.py
app/members/urls/: apis.py
app/static/bootstrap/: bootstrap.css
app/templates/: start.html
(+31 files in other folders)
