[tool.poetry]
name = "project-foodbox"
version = "0.1.0"
description = ""
authors = ["Hyojin Kwon <raccoonhj33@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.6"
djangorestframework = "^3.11.0"
django-extensions = "^2.2.9"
notebook = "^6.4.10"
pillow = "^7.1.2"
django-storages = "^1.9.1"
boto3 = "^1.13.10"
sentry_sdk = "^0.14.4"
beautifulsoup4 = "^4.9.1"
httpie = "^2.1.0"
docker-compose = "^1.26.0"
supervisor = "^4.2.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
